--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="../public/css/style.css" rel="stylesheet" />
+    <link href="../public/css/style2.css" rel="stylesheet" />
 </head>
 <body>
 {% block header %}
@@ -20,14 +24,14 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active"> <a class="nav-link" href="../public/index.php">Accueil <span class="sr-only">(current)</span></a> </li>
             {% if app.session.id %}
-                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=member">Mon Espace</a></li>
+                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=member">Mon espace</a></li>
                 {% if app.session.id == 2 %}
                     <li class="nav-item"><a class="nav-link" href="../public/index.php?route=admin">Administration</a></li>
                 {% endif %}
-                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=logout">Déconnection</a></li>
+                <li class="nav-item"><a class="nav-link" href="../public/index.php?route=logout">Déconnexion</a></li>
             {% else %}
                 <li class="nav-item"><a class="nav-link" href="../public/index.php?route=register">Inscription</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../public/index.php?route=login">Connection</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../public/index.php?route=login">Connexion</a></li>
             {% endif %}
         </ul>
 
@@ -42,12 +46,35 @@
 <footer>
     <div class="container">
         <div class="row">
-    <ul class="col-4 col-offset-4">
-        <li>Cookie</li>
-        <li>Mentions légales</li>
-        <li>CGU</li>
-    </ul>
-    <p class="col-4 text-center">Restez connectés</p>
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                </span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+                        </a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted">Créé par Fabien Retailleau en 2019</p>
+            </div>
         </div>
     </div>
 </footer>
