--- a/templates/member_update.html.twig
+++ b/templates/member_update.html.twig
@@ -4,21 +4,30 @@
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
 
-
+    <div class="container">
+    <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+        <h1>Modifiez mes informations</h1></br>
 <form method="post" action="../public/index.php?route=newName" class="newName">
-    <label for="message">Pseudo</label> :  <input type="text" name="name" id="message" value={{ app.session.name }} ><br />
-    <input type="submit" value="Modifier" />
+    <div class="control-group">
+        <label for="message">Pseudo</label> : </br> <input type="text" name="name" id="message" value={{ app.session.name }} >
+    <input type="submit" value="Modifier" class="btn btn-secondary"/>
+    </div>
 </form>
     <form method="post" action="../public/index.php?route=newMail" class="newMail">
-        <label for="message">Email</label> :  <input type="email" name="email" id="email" value={{ info.email }} ><br />
-        <input type="submit" value="Modifier" />
+        <label for="message">Email</label> : </br>  <input type="email" name="email" id="email" value={{ info.email }} >
+        <input type="submit" value="Modifier" class="btn btn-secondary" />
     </form>
     <form method="post" action="../public/index.php?route=newPass" class="newName">
-        <label for="pass">Mot de passe</label>
+        <label for="pass">Mot de passe</label></br>
         <input type="password" name="pass" id="pass" />
         <br />
-        <label for="checkpass">Confirmation mot de passe</label>
+        <label for="checkpass">Confirmation mot de passe</label></br>
         <input type="password" name="checkpass" id="checkpass" />
-        <input type="submit" value="Changer mot de passe">
+        <input type="submit" value="Changer mot de passe" class="btn btn-secondary"/>
     </form>
+    </div>
+    </div>
+    </div>
+
 {% endblock %}
