--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -5,26 +5,107 @@
 {% block content %}
 
 <h1>Administration</h1>
-<p>En construction</p>
-    <div id="contenu">
-        <ul>
-            <li><a href="../public/index.php?route=add_article">Créer un nouvel article</a></li>
-            <li><a href="../public/index.php?route=reportComment">Liste des commentaires signalées</a></li>
-            <li><a href="../public/index.php?route=listUser">Liste des utilisateurs</a></li>
-        </ul>
-        <div class="container">
-            <div class="row">
+    <div class="row justify-content-center">
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-home-tab article" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Mes chapitres</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-profile-tab comment" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Commentaires signalés</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-contact-tab user" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Utilisateurs</a>
+        </li>
+    </ul>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="container">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Titre</th>
+                        <th scope="col">Créé le</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    {% for data in articles %}
+                        <tbody>
 
-    {% for data in articles %}
-        <div class="news col-12">
-    <h2><a href="../public/index.php?route=single&articleId={{ data.id }}">{{ data.title }}</a></h2>
-    <p>
-        <br />
-        <em><a href="../public/index.php?route=comment&article={{ data.id }}">Commentaires</a><a href="../public/index.php?route=get_article&article={{ data.id }}">Modifier</a><a href="../public/index.php?route=delete_article&article={{ data.id }}">Supprimer</a></em>
-    </p>
-</div>
-    {% endfor %}
-            </div>
-</div>
-</div>
+                        <td>{{ data.title }}</td>
+                        <td>{{ data.created_at }}</td>
+                        <td><a class="btn btn-secondary" href="../public/index.php?route=get_article&articleId={{ data.id }}">Modifier </a>
+                            <a class="btn btn-secondary" href="../public/index.php?route=delete_article&articleId={{ data.id }}">Supprimer </a></td>
+                        </tbody>
+
+                    {% endfor %}
+                </table></div>
+        </div>
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="container">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    {% for data in comment %}
+                        <tbody>
+                        <td><h3>{{ data.name}}</br>{{  ' le ' ~ data.created_at }} </h3></td>
+                        <td><p>{{ data.content }}</p></td>
+                        <td><!-- Button trigger modal -->
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+                                Supprimer
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Voulez-vous vraiment supprimer ce commentaire ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=delete_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Supprimer </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Modifier</a>
+                            <a class="btn btn-secondary" href="{{ "../public/index.php?route=validate_comment&ID_comment="~data.id}}">Valider</a></td>
+                        </tbody>
+                    {% endfor %}
+                </table>
+            </div></div>
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            <div class="container">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Créé le</th>
+                </tr>
+                </thead>
+                {% for user in users %}
+                    <tbody>
+
+                    <td id="div_donnees">{{ user.name }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.created_at }}</td>
+                    </tbody>
+
+                {% endfor %}
+            </table></div></div>
+    </div>
+    </br>
 {% endblock %}
