--- a/templates/listUser.html.twig
+++ b/templates/listUser.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Utilisateurs{% endblock %}
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
-    En construction
+    <h1>Utilisateurs du blog</h1></br>
     <div class="container">
     <table class="table table-striped table-bordered">
     <thead class="thead-dark">
