--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -3,13 +3,30 @@
 {% block title %}Connexion{% endblock %}
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
-    <form method="post" action="../public/index.php?route=login" class="newComments">
-        <label for="pseudo">Pseudo</label>
-        <input type="text" name="pseudo" id="pseudo" />
-        <br />
-        <label for="pass">Mot de passe</label>
-        <input type="password" name="pass" id="pass" />
-        <br />
-        <input type="submit" value="Envoyer" />
-    </form>
+<h1>Connection</h1></br>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <form method="post" action="../public/index.php?route=login" name="login" id="contactForm">
+                    <div class="control-group">
+                        <div class="form-group controls">
+                            <label>Pseudo</label>
+                            <input type="text" class="form-control" placeholder="Name" id="pseudo" name="pseudo" required data-validation-required-message="Entrez votre pseudo.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group  controls">
+                            <label>Mot de passe</label>
+                            <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" required data-validation-required-message="Entrez votre mot de passe.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-secondary" id="Envoyer">Envoyer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
