--- a/templates/member.html.twig
+++ b/templates/member.html.twig
@@ -4,49 +4,173 @@
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
 <h1>Mon espace membre</h1>
-<div class="container-fluid">
-<div class="row">
-    <div class="col-md-2 offset-md-1">
-    <ul class="list-group">
-        <li class="list-group-item"><a class="btn btn-secondary" href="../public/index.php?route=comment_member">Mes commentaires</a></br></li>
-        <li class="list-group-item"><a class="btn btn-secondary" href="../public/index.php?route=update_member">Modifier vos données</a></br></li>
-        <li class="list-group-item">
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-            Supprimer
-        </button></li>
+    <div class="row justify-content-center">
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Mes infos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Mes commentaires</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Modifier mes infos</a>
+        </li>
+    </ul>
+    </div>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="container-fluid">
+                <div class="row">
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                    <div class="col-12 text-center">
+                        <ul>
+                            <li>Pseudo : {{ app.session.name }}</li></br>
+                            <li>Email : {{ info.email }}</li></br>
+                            <li>Création du compte : {{ info.created_at }}</li></br>
+                        </ul>
+                        <div class="list-group-item">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+                                Supprimer
+                            </button></div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Voulez-vous vraiment supprimer votre compte ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                        <a class="btn btn-secondary" href="../public/index.php?route=delete_member">Supprimer</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="modal-body">
-                        Voulez-vous vraiment supprimer votre compte ?
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                        <a class="btn btn-secondary" href="../public/index.php?route=delete_member">Supprimer</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="container">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Créé le</th>
+                        <th scope="col">Commentaire</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    {% for data in comment %}
+                        <tbody>
+                        <td><h3>{{' le ' ~ data.created_at }} </h3></td>
+                        <td><p>{{ data.content }}</p></td>
+                        <td><!-- Button trigger modal -->
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+                                Supprimer
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Voulez-vous vraiment supprimer ce commentaire ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=delete_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Supprimer </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Modifier</a></td>
+                        </tbody>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            <div class="container">
+                <div class="row">
+                        <div class="justify-content-center">
+                        <form method="post" action="../public/index.php?route=newName" class="newName">
+                            <div class="control-group">
+                                <label for="message">Pseudo</label> : </br> <input type="text" name="name" id="message" value={{ app.session.name }} >
+                                <input type="submit" value="Modifier" class="btn btn-secondary"/>
+                            </div>
+                        </form>
+                        <form method="post" action="../public/index.php?route=newMail" class="newMail">
+                            <label for="message">Email</label> : </br>  <input type="email" name="email" id="email" value={{ info.email }} >
+                            <input type="submit" value="Modifier" class="btn btn-secondary" />
+                        </form>
+                        <form method="post" action="../public/index.php?route=newPass" class="newName">
+                            <label for="pass">Mot de passe</label></br>
+                            <input type="password" name="pass" id="pass" />
+                            <br />
+                            <label for="checkpass">Confirmation mot de passe</label></br>
+                            <input type="password" name="checkpass" id="checkpass" />
+                            <input type="submit" value="Changer mot de passe" class="btn btn-secondary"/>
+                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </ul>
-    </div>
-<div class="col-md-6 text-center">
-    <p>Mes infos</p>
+
+{#<div class="container-fluid">
+<div class="row">
+
+<div class="col-12 text-center">
+    <p>Mes infos</p></br>
 <ul>
-    <li>Pseudo : {{ app.session.name }}</li>
-    <li>Email : {{ info.email }}</li>
-    <li>Création du compte : {{ info.created_at }}</li>
+    <li>Pseudo : {{ app.session.name }}</li></br>
+    <li>Email : {{ info.email }}</li></br>
+    <li>Création du compte : {{ info.created_at }}</li></br>
 </ul>
+    <div class="list-group-item">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+            Supprimer
+        </button></div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Suppression</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Voulez-vous vraiment supprimer votre compte ?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                    <a class="btn btn-secondary" href="../public/index.php?route=delete_member">Supprimer</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 </div>
-</div>
+</div>#}
 {% endblock %}
