--- a/templates/report_comment.html.twig
+++ b/templates/report_comment.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Article{% endblock %}
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
+    <h1>Commentaires signalés</h1></br>
     <div class="container">
     <table class="table table-striped table-bordered">
     <thead class="thead-dark">
