--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,3 +62,11 @@ footer{
 .listInfos{
     border-left: black 1px solid;
 }
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link{
+    color: #fff;
+    background-color: #6c757d;
+}
+#pseudo{
+    width: auto;
+}
