--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -20,6 +20,7 @@
     </div>
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <a class="btn btn-secondary" href="../public/index.php?route=add_article">Nouveau Chapitre</a>
             <div class="container">
                 <table class="table table-striped table-bordered">
                     <thead class="thead-dark">
