--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row">
         <div class="col-2 sommaire">
-        <p>Sommaire</p>
+        <h2>Sommaire</h2>
 
             <ul>
                 {% for data in article %}
