--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -21,7 +21,11 @@
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             <a class="btn btn-secondary" href="../public/index.php?route=add_article">Nouveau Chapitre</a>
+            </br>
+            </br>
+
             <div class="container">
+                <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="thead-dark">
                     <tr>
@@ -34,27 +38,54 @@
                         <tbody>
 
                         <td>{{ data.title }}</td>
-                        <td>{{ data.created_at }}</td>
+                        <td>{{ data.created_at|date("d/m/Y") }}</td>
                         <td><a class="btn btn-secondary" href="../public/index.php?route=get_article&articleId={{ data.id }}">Modifier </a>
-                            <a class="btn btn-secondary" href="../public/index.php?route=delete_article&articleId={{ data.id }}">Supprimer </a></td>
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#commentModal">
+                                Supprimer
+                            </button></td>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="commentModalLabel">Suppression</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Voulez-vous vraiment supprimer ce chapitre ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                             <a class="btn btn-secondary" href="../public/index.php?route=delete_article&articleId={{ data.id }}">Supprimer </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </tbody>
 
                     {% endfor %}
-                </table></div>
+                </table>
+                </div>
+            </div>
         </div>
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <div class="container">
+                <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Nom</th>
-                        <th scope="col">Email</th>
+                        <th scope="col">Commentaire</th>
                         <th scope="col">Action</th>
                     </tr>
                     </thead>
                     {% for data in comment %}
                         <tbody>
-                        <td><h3>{{ data.name}}</br>{{  ' le ' ~ data.created_at }} </h3></td>
+                        <td><p>{{ data.name}}</br>{{  ' le ' ~ data.created_at }} </p></td>
                         <td><p>{{ data.content }}</p></td>
                         <td><!-- Button trigger modal -->
                             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
@@ -62,7 +93,7 @@
                             </button>
 
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -86,15 +117,18 @@
                         </tbody>
                     {% endfor %}
                 </table>
-            </div></div>
+            </div>
+            </div>
+        </div>
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="container">
+                <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">Nom</th>
                     <th scope="col">Email</th>
-                    <th scope="col">Créé le</th>
+                    <th scope="col" class="d-none d-md-block">Créé le</th>
                 </tr>
                 </thead>
                 {% for user in users %}
@@ -102,11 +136,12 @@
 
                     <td id="div_donnees">{{ user.name }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.created_at }}</td>
+                    <td class="d-none d-md-block">{{ user.created_at|date("d/m/Y") }}</td>
                     </tbody>
 
                 {% endfor %}
             </table></div></div>
+        </div>
     </div>
     </br>
 {% endblock %}
