--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,16 +5,15 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Krub:300,300i,400,400i&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="../public/css/style2.css" rel="stylesheet" />
     <link href="../public/css/style.css" rel="stylesheet" />
 
 </head>
 <body>
 {% block header %}
 
-<img  src="../public/fonts/banniere2.jpg" class = "img-fluid" alt="bannière">
+<img src="../public/img/banniere2.jpg" class = "img-fluid" alt="bannière">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +37,7 @@
 
     </div>
 </nav>
+</br>
 {% endblock %}
 <div id="content">
     {% block content %}
