--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -11,28 +11,28 @@
                     <div class="control-group">
                         <div class="form-group controls">
                             <label>Pseudo</label>
-                            <input type="text" class="form-control" placeholder="Name" id="pseudo" name="pseudo" required data-validation-required-message="Entrez votre pseudo.">
+                            <input type="text" class="form-control" placeholder="Pseudo" id="pseudo" name="pseudo" required data-validation-required-message="Entrez votre pseudo.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="form-group  controls">
                             <label>Mot de passe</label>
-                            <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" required data-validation-required-message="Entrez votre mot de passe.">
+                            <input type="password" class="form-control" placeholder="Mot de passe" id="pass" name="pass" required data-validation-required-message="Entrez votre mot de passe.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="form-group col-xs-12  controls">
                             <label>Confirmation mot de passe</label>
-                            <input type="password" class="form-control" placeholder="Check Pass" id="checkpass" name="checkpass" required data-validation-required-message="Confirmez votr emot de passe.">
+                            <input type="password" class="form-control" placeholder="Confirmation mot de passe" id="checkpass" name="checkpass" required data-validation-required-message="Confirmez votre mot de passe.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="form-group  controls">
                             <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required data-validation-required-message="Entrez votre adresse mail.">
+                            <input type="email" class="form-control" placeholder="Adresse email" id="email" name="email" required data-validation-required-message="Entrez votre adresse mail.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
