--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -25,8 +25,8 @@
             </br>
 
             <div class="container">
-                <div class="table-responsive">
-                <table class="table table-striped table-bordered">
+                <div class="table-responsive-sm">
+                <table class="table table-striped table-bordered w-auto">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Titre</th>
@@ -39,7 +39,7 @@
 
                         <td>{{ data.title }}</td>
                         <td>{{ data.created_at|date("d/m/Y") }}</td>
-                        <td><a class="btn btn-secondary" href="../public/index.php?route=get_article&articleId={{ data.id }}">Modifier </a>
+                        <td class="row justify-content-center"><a class="btn btn-secondary" href="../public/index.php?route=get_article&articleId={{ data.id }}">Modifier </a>
                             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#commentModal">
                                 Supprimer
                             </button></td>
@@ -74,20 +74,21 @@
         </div>
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <div class="container">
-                <div class="table-responsive">
+                <div class="table-responsive-sm">
                 <table class="table table-striped table-bordered">
                     <thead class="thead-dark">
                     <tr>
-                        <th scope="col">Nom</th>
-                        <th scope="col">Commentaire</th>
-                        <th scope="col">Action</th>
+                        <th class="th-sm" scope="col">Nom</th>
+                        <th class="th-sm" scope="col">Commentaire</th>
+                        <th class="th-sm" scope="col">Action</th>
                     </tr>
                     </thead>
                     {% for data in comment %}
                         <tbody>
                         <td><p>{{ data.name}}</br>{{  ' le ' ~ data.created_at }} </p></td>
                         <td><p>{{ data.content }}</p></td>
-                        <td><!-- Button trigger modal -->
+                        <td class="row justify-content-center"><!-- Button trigger modal -->
+                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Modifier</a>
                             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
                                 Supprimer
                             </button>
@@ -107,12 +108,12 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=delete_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Supprimer </a>
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <a class="btn btn-secondary" href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&ID_article='~app.get.article}}">Modifier</a>
+
                             <a class="btn btn-secondary" href="{{ "../public/index.php?route=validate_comment&ID_comment="~data.id}}">Valider</a></td>
                         </tbody>
                     {% endfor %}
@@ -122,13 +123,13 @@
         </div>
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="container">
-                <div class="table-responsive">
+                <div class="table-responsive-sm">
             <table class="table table-striped table-bordered">
                 <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Nom</th>
-                    <th scope="col">Email</th>
-                    <th scope="col" class="d-none d-md-block">Créé le</th>
+                    <th class="th-sm" scope="col">Nom</th>
+                    <th class="th-sm" scope="col">Email</th>
+                    <th class="th-sm" scope="col">Créé le</th>
                 </tr>
                 </thead>
                 {% for user in users %}
@@ -136,7 +137,7 @@
 
                     <td id="div_donnees">{{ user.name }}</td>
                     <td>{{ user.email }}</td>
-                    <td class="d-none d-md-block">{{ user.created_at|date("d/m/Y") }}</td>
+                    <td>{{ user.created_at|date("d/m/Y") }}</td>
                     </tbody>
 
                 {% endfor %}
