--- a/templates/comment_update.html.twig
+++ b/templates/comment_update.html.twig
@@ -2,17 +2,32 @@
 {% block title %}Modifier votre commentaire{% endblock %}
 {% block header %}{{ parent() }}{% endblock %}
 {% block content %}
-    <div class="news">
-        <p>Modifier votre commentaire :</p>
-        {% for data in comment %}
-            <form method="post" action="../public/index.php?route=update_comment&articleId={{ app.get.articleId }}&ID_comment={{ app.get.ID_comment }}" class="newComments">
-                <p>
-                    <label for="pseudo">Pseudo</label> : <input type="text" name="name" id="auteur" value="{{ data.name }}" /><br />
-                    <label for="message">Message</label> :  <input type="text" name="content" id="commentaire" value="{{ data.content }}" /><br />
-
-                    <input type="submit" value="Envoyer" />
-                </p>
-            </form>
-        {% endfor %}
+        <h2>Modifier votre commentaire :</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                {% for data in comment %}
+                <form method="post" action="../public/index.php?route=update_comment&articleId={{ app.get.articleId }}&ID_comment={{ app.get.ID_comment }}" name="updateComment" id="contactForm">
+                    <div class="control-group">
+                        <div class="form-group controls">
+                            <label>Pseudo</label>
+                            <input type="text" class="form-control" placeholder="Name" id="pseudo" name="pseudo" value="{{ data.name }}" required data-validation-required-message="Entrez votre pseudo.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group  controls">
+                            <label>Commentaire</label></br>
+                            <input type="text" name="content" id="commentaire" value="{{ data.content }}" />
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-secondary" id="Envoyer">Envoyer</button>
+                    </div>
+                </form>
+                {% endfor %}
+            </div>
+        </div>
     </div>
 {% endblock %}
