--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -11,14 +11,14 @@
                     <div class="control-group">
                         <div class="form-group controls">
                             <label>Pseudo</label>
-                            <input type="text" class="form-control" placeholder="Name" id="pseudo" name="pseudo" required data-validation-required-message="Entrez votre pseudo.">
+                            <input type="text" class="form-control" placeholder="Pseudo" id="pseudo" name="pseudo" required data-validation-required-message="Entrez votre pseudo.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="form-group  controls">
                             <label>Mot de passe</label>
-                            <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" required data-validation-required-message="Entrez votre mot de passe.">
+                            <input type="password" class="form-control" placeholder="Mot de passe" id="pass" name="pass" required data-validation-required-message="Entrez votre mot de passe.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
