--- a/public/css/style.css
+++ b/public/css/style.css
@@ -416,12 +416,6 @@ footer .copyright {
     font-size: 16px;
     padding: 25px 35px;
 }
-.sommaire{
-    border-right: black 1px solid;
-}
-.listInfos{
-    border-left: black 1px solid;
-}
 .news p
 {
     background-color:#CCCCCC;
@@ -466,4 +460,13 @@ button{
 }
 .imgHome{
     margin-bottom: 10px;
+}
+
+@media screen and (min-width: 992px)  {
+    .sommaire{
+        border-right: black 1px solid;
+    }
+    .listInfos{
+        border-left: black 1px solid;
+    }
 }
