--- a/templates/single.html.twig
+++ b/templates/single.html.twig
@@ -50,7 +50,8 @@
                                 </div>
                             </div>
                             <a class="btn btn-secondary" href="{{' ../public/index.php?route=get_comment&ID_comment='~data.id~'&articleId='~app.get.articleId}}">Modifier</a>
-                        {% else %}
+                        {% endif %}
+                        {% if data.report != 1 and app.session.name != data.name %}
                             <a class="btn btn-secondary" href="{{ '../public/index.php?route=report&ID_comment='~data.id~'&articleId='~app.get.articleId}}">Signaler</a>
                         {% endif %}
                     </div>
